--- a/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.scss
@@ -1,10 +1,12 @@
-.alertas {
+.dash-cards {
   ::ng-deep {
     .arf-dash-card {
       border-radius: 0;
       box-shadow: none;
       overflow: auto;
-      padding: 2px;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
 
       .title-container {
         display: flex;
@@ -26,10 +28,20 @@
       }
     }
   }
+}
+
+.alertas {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+  height: 100vh;
+  width: 100%;
+  overflow: overlay;
 
   &__table {
     text-align: center;
-    // height: 100%;
+    // height: 50%;
     font-size: 0.9rem;
     border-collapse: collapse;
     width: 100%;
@@ -115,19 +127,32 @@
     font-weight: 400;
   }
 
-  button {
-    margin-left: 10px;
-    align-self: flex-end;
-    background: #1E2044;
-    cursor: pointer;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    color: #fff;
-    padding: 3px 20px;
+  &__btn-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20%;
+    border-top: 2px solid #d4ad68;
+    border-radius: 2px;
+    background: linear-gradient(to right, #212121, #212121fd);
+    column-gap: 25px;
+
+    button {
+      background: #1E2044;
+      cursor: pointer;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      color: #fff;
+      padding: 10px 45px;
+      font-size: .95rem;
+    }
+
+    button:disabled {
+      background: rgba(93, 95, 156, 0.7) !important;
+    }
   }
 
-  button:disabled {
-    background: rgba(30, 32, 68, 0.7) !important;
-  }
+
 
 }
