--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard-kpi/arf-dashboard-kpi.component.scss
@@ -119,6 +119,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 
     p {
       text-align: center;
@@ -134,5 +135,15 @@
       margin-top: 5px;
       width: 100%;
     }
+
+    .text-centered {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.2rem;
+      width: max-content;
+    }
   }
+
 }
