validações de alterar dados

--- a/client-side/src/app/components/arf-oversight-page/arf-alterar-dados/arf-alterar-dados.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-alterar-dados/arf-alterar-dados.component.html
@@ -16,6 +16,7 @@
             </div>
         </div>
         <span class="error">{{error}}</span>
+        <span class="pass">{{pass}}</span>
         <button class="alterardados" (click)="alterarDados()">
             Confirmar
         </button>
