--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.html
@@ -5,10 +5,10 @@
 <span class="username">{{username | titlecase}}</span>
 
 <ul class="nav-items-container">
-  <li *ngIf="pagina == 'infra'"><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Máquinas</li>
-  <li *ngIf="pagina == 'acessos'"><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Acessos</li>
-  <li *ngIf="pagina == 'dashboard'"><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Dashboard</li>
-  <li *ngIf="pagina == 'dashboard'"><img src="../../../../assets/imagens/navItem (3).png" alt="imagem"> Alertas</li>
+  <li [routerLink]="['/oversight/infra']"*ngIf="pagina == 'infra'"><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Máquinas</li>
+  <li [routerLink]="['/oversight/acessos']"*ngIf="pagina == 'acessos'"><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Acessos</li>
+  <li [routerLink]="['/oversight/dashboard']"*ngIf="pagina == 'dashboard'"><img src="../../../../assets/imagens/navItem (1).png" alt="imagem"> Dashboard</li>
+  <li [routerLink]="['/oversight/alertas']" *ngIf="pagina == 'dashboard'"><img src="../../../../assets/imagens/navItem (3).png" alt="imagem"> Alertas</li>
   <li [routerLink]="['/oversight/alterar-dados']" ><img src="../../../../assets/imagens/navItem (4).png" alt="imagem"> Editar dados</li>
   <a (click)="limparStorage()" [routerLink]="['/']">
     <li><img src="assets/imagens/navItem (1).png" alt="imagem"> Sair</li>
