--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-navbar/arf-oversight-navbar.component.scss
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   padding-top: 15px;
-  position: relative;
 }
 
 .logo {
@@ -96,4 +95,31 @@ ul+p {
 .copyright {
   position: absolute;
   bottom: 20px;
+}
+
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 50px;
+  padding: 20px 100px;
+
+  &__btn-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    column-gap: 20px;
+
+    button {
+      background: #1E2044;
+      cursor: pointer;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      color: #fff;
+      padding: 15px 30px;
+      font-size: .95rem;
+    }
+  }
 }
