--- a/client-side/src/app/components/arf-oversight-page/comum/arf-modal/arf-modal.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/comum/arf-modal/arf-modal.component.scss
@@ -16,19 +16,20 @@
     border-radius: 10px;
     box-shadow: 0 0 #000;
     border: 1px solid #000;
-    padding: 10px 50px;
+    padding: 50px 30px;
     background-color: #fff;
     width: fit-content;
+    letter-spacing: 2px;
   }
 }
 
 .autoHidden {
-  animation: autoHidden 1.5s forwards linear;
+  animation: autoHidden .75s forwards linear;
 }
 
 @keyframes autoHidden {
   from {
-    opacity: .5;
+    opacity: 9;
   }
 
   to {
