feat: adição do modal, algumas correções e estilizações.

--- a/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-alertas/arf-alertas.component.html
@@ -81,4 +81,6 @@
       Resetar
     </button>
   </div>
+
 </arf-dash-card>
+<arf-modal *ngIf="abrirModal" (fadedOut)="abrirModal = false"></arf-modal>
