--- a/client-side/src/app/components/arf-login/arf-login.component.html
+++ b/client-side/src/app/components/arf-login/arf-login.component.html
@@ -27,6 +27,6 @@
   </div>
   <div class="footerLogin">
     <p>© 2022 Empresa, Inc, Todos os direitos reservados</p>
-    <a href="https://arfas-sp.tomticket.com?account=3782528P15092022080207" target="_blank">Suporte</a>
+    <a href="https://arfas-oversight.tomticket.com/chat/?id=EP59895&ac=3833280P28112022053539" target="_blank">Suporte</a>
   </div>
 </section>
