fix: estilização dashboard

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.html
@@ -21,7 +21,7 @@
       </td>
       <td>{{ userData.id_pc }}</td>
       <td>{{ userData.id_hdd }}</td>
-      <td style="text-transform: capitalize;">{{ userData.usuario }}</td>
+      <td style="width: 150px;">{{ userData.usuario | titlecase}}</td>
       <td>{{ userData.departamento }}</td>
       <td>{{ date }}</td>
       <td [ngStyle]="{'backgroundColor':
