--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/comum/arf-table-lista/arf-table-lista.component.scss
@@ -12,7 +12,6 @@ table {
   }
 
   th,
-  td,
   label,
   i {
     cursor: pointer;
@@ -39,7 +38,7 @@ table {
 
   .body-rows {
     td {
-      width: fit-content;
+      width: max-content;
     }
   }
 
